[gd_scene load_steps=2 format=3 uid="uid://dhssfh3cjjl5q"]

[ext_resource type="Script" path="res://Scenes/Objects/Level/level_camera.gd" id="1_6u04b"]

[node name="LevelCamera" type="Camera2D"]
process_mode = 3
script = ExtResource("1_6u04b")

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
